--- a/rivabot/englishlink123.css
+++ b/rivabot/englishlink123.css
@@ -101,9 +101,9 @@
   display: inline-block;
  padding: 3px;
  margin: 3px;
- background-color: salmon;
+ background-color: white;
 
-  border: 1px solid black;
+  border: 1px solid cyan;
  border-radius: 3px;
  font-size: 1em;
  color: white;
