--- a/rivabot/englishlink123.css
+++ b/rivabot/englishlink123.css
@@ -56,9 +56,9 @@
  display: inline-block;
  padding: 3px;
  margin: 3px;
- background-color: red;
+ background-color: white;
  color: white;
- border: 1px solid white;
+ border: 1px solid cyan;
  border-radius: 3px;
  font-size: 1em;
  text-align: center;
