--- a/rivabot/englishlink123.css
+++ b/rivabot/englishlink123.css
@@ -67,7 +67,7 @@
 /* Fixed background */
  body {
 
-   background-color: #FFFFFF;
+   background-color: gray;
    background-image: url('imgv1.jpg');
    background-attachment: fixed;
    background-position: center center;
